Updated github and linkedin links

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/Alan-Choi">Alan-Choi</a>
+                        <a href="https://github.com/Alan-Choi">Alan-Choi</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="www.linkedin.com/in/hyoungjin-choi-345bb7169">Hyoungjin Choi</a>
+                        <a href="https://www.linkedin.com/in/hyoungjin-choi-345bb7169/">Hyoungjin Choi</a>
                     </p>
 				</section>
 				<section>
