--- a/index.html
+++ b/index.html
@@ -127,11 +127,18 @@
             <section>
                 <h2>Projects</h2>
                 <h3>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/anthonymesa/Cwacos" target="_blank">Cloudy With a Chance of Stonks</a>
+                    <ul>
+                        <li>
+                            <i class="fab fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/bugg86/CSC490-League-Stat-Manager" target="_blank">League Stats Manager (In Progress)</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-github" aria-hidden="true"></i>
+                            <a href="https://github.com/anthonymesa/Cwacos" target="_blank">Cloudy With a Chance of Stonks</a>                    
+                        </li>
+                    </ul>
                 </h3>
                 </p>
-
             </section>
         </article>
     </main>
