Minor edit to skill section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li>x86 Assembly Language</li>
                 </ul>
                 <h4>
-                    Language
+                    Foreign Language
                 </h4>
                 <ul>
                     <li>Korean</li>
@@ -130,11 +130,13 @@
                     <ul>
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/bugg86/CSC490-League-Stat-Manager" target="_blank">League Stats Manager (In Progress)</a>
+                            <a href="https://github.com/bugg86/CSC490-League-Stat-Manager" target="_blank">League Stats
+                                Manager (In Progress)</a>
                         </li>
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
-                            <a href="https://github.com/anthonymesa/Cwacos" target="_blank">Cloudy With a Chance of Stonks</a>                    
+                            <a href="https://github.com/anthonymesa/Cwacos" target="_blank">Cloudy With a Chance of
+                                Stonks</a>
                         </li>
                     </ul>
                 </h3>
