--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
                             <a href="https://github.com/bugg86/CSC490-League-Stat-Manager" target="_blank">League Stats
-                                Manager (In Progress)</a>
+                                Manager</a>
                         </li>
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
