--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- resume header with your name and title -->
         <h1><b>Hyoungjin</b> Choi</h1>
         <hr>
-        Software developer
+        Software Developer
         <hr>
     </header>
     <main>
