--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             <section>
                 <h2>ABOUT</h2>
                 <!-- about you -->
-                <p>I am a 4th year Computer Science student actively seeking for entry level software developer roles.
+                <p>I am a Software Developer who had recently graduated from UNCG with a BS in Computer Science 
+                    and I am actively seeking for entry level software developer roles.
                 </p>
             </section>
             <section>
