Updated Certificates section with links and added additional certificates

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                     Certificates
                 </h4>
                 <ul>
-                    <li>C++ Programming, GTCC</li>
-                    <li>Java Programming, GTCC</li>
+                    <li><a href="https://catalog.gtcc.edu/preview_program.php?catoid=4&poid=837&returnto=190"> C++ Programming, GTCC </a></li>
+                    <li><a href="https://catalog.gtcc.edu/preview_program.php?catoid=4&poid=834&returnto=190"> Java Programming, GTCC </a></li>
+                    <li><a href="https://catalog.gtcc.edu/preview_program.php?catoid=4&poid=818&returnto=190"> Computer Technology Integration, GTCC</a></li>
+                    <li><a href="https://verification.testout.com/"> PC Pro, TestOut (Certificate ID: C3C82) </a></li>
                 </ul>
                 <h4>
                     Familiar programming languages
