Added the ML project in the projects section

--- a/index.html
+++ b/index.html
@@ -133,12 +133,16 @@
                     <ul>
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
-                            <a href="https://github.com/bugg86/CSC490-League-Stat-Manager" target="_blank">League Stats
+                            <a href="https://github.com/Alan-Choi/Fruits_Classification/" target="_blank">Fruits_Classification</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-github" aria-hidden="true"></i>
+                            <a href="https://github.com/bugg86/CSC490-League-Stat-Manager/" target="_blank">League Stats
                                 Manager</a>
                         </li>
                         <li>
                             <i class="fab fa-github" aria-hidden="true"></i>
-                            <a href="https://github.com/anthonymesa/Cwacos" target="_blank">Cloudy With a Chance of
+                            <a href="https://github.com/anthonymesa/Cwacos/" target="_blank">Cloudy With a Chance of
                                 Stonks</a>
                         </li>
                     </ul>
