Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- resume header with your name and title -->
         <h1><b>Hyoungjin</b> Choi</h1>
         <hr>
-        Software Developer
+        Associate Software Developer
         <hr>
     </header>
     <main>
@@ -92,6 +92,15 @@
             <section>
                 <h2>WORK EXPERIENCE</h2>
                 <!-- your work experience -->
+                <h3><b>Associate Software Engineer</b></h3>
+                <p>
+                    Fidelity Investments, Durham, NC | January 2023 - Present
+                </p>
+                <ul>
+                    <li>Currently undergoing Orientation in the Fidelity Leap program</li>
+                </ul>
+
+
                 <h3><b>Lab Assistant</b></h3>
                 <p>
                     UNCG Department of Computer Science, Greensboro, NC | August 2021 - December 2021
