--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
             <section>
                 <h2>ABOUT</h2>
                 <!-- about you -->
-                <p>I am a Software Developer who had recently graduated from UNCG with a BS in Computer Science 
-                    and I am actively seeking for entry level software developer roles.
+                <p>I am a Software Developer who had recently graduated from UNCG with a BS in Computer Science.
                 </p>
             </section>
             <section>
