--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- resume header with your name and title -->
         <h1><b>Hyoungjin</b> Choi</h1>
         <hr>
-        Associate Software Developer
+        Full Stack Engineer
         <hr>
     </header>
     <main>
@@ -45,13 +45,15 @@
                     <li><a href="https://verification.testout.com/"> PC Pro, TestOut (Certificate ID: C3C82) </a></li>
                 </ul>
                 <h4>
-                    Familiar programming languages
+                    Familiar programming languages and frameworks
                 </h4>
                 <ul>
                     <li>Java</li>
+                    <li>Python</li>
+                    <li>Django</li>
+                    <li>Angular</li>
                     <li>C</li>
                     <li>C++</li>
-                    <li>Python</li>
                     <li>x86 Assembly Language</li>
                 </ul>
                 <h4>
@@ -91,12 +93,20 @@
             <section>
                 <h2>WORK EXPERIENCE</h2>
                 <!-- your work experience -->
+                <h3><b>Full Stack Engineer</b></h3>
+                <p>
+                    Fidelity Investments, Durham, NC | January 2023 - Present
+                </p>
+                <ul>
+                    <li>Currently contributing to multiple client facing web applications</li>
+                </ul>
+
                 <h3><b>Associate Software Engineer</b></h3>
                 <p>
                     Fidelity Investments, Durham, NC | January 2023 - Present
                 </p>
                 <ul>
-                    <li>Currently undergoing Orientation in the Fidelity Leap program</li>
+                    <li>Contributed to internal and client facing applications for automating work items and digitizing legal forms and applications</li>
                 </ul>
 
 
