Updated experience timeline

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <!-- your work experience -->
                 <h3><b>Full Stack Engineer</b></h3>
                 <p>
-                    Fidelity Investments, Durham, NC | January 2023 - Present
+                    Fidelity Investments, Durham, NC | July 2024 - Present
                 </p>
                 <ul>
                     <li>Currently contributing to multiple client facing web applications</li>
@@ -103,7 +103,7 @@
 
                 <h3><b>Associate Software Engineer</b></h3>
                 <p>
-                    Fidelity Investments, Durham, NC | January 2023 - Present
+                    Fidelity Investments, Durham, NC | January 2023 - June 2024
                 </p>
                 <ul>
                     <li>Contributed to internal and client facing applications for automating work items and digitizing legal forms and applications</li>
